<resources>
    <string name="app_name">CustomKeyboard</string>

    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_backspace">Back</string>
    <string name="loading_message">Session Expired</string>
    <string name="otp">This is an <u>Login with OTP</u>.</string>
    <string name="internet_msg">Please make sure you are connected to internet!!</string>
</resources>
